# primal

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  README.md
cmake/: CompilerFlags.cmake  primal.1.in  version.hpp.in
docs/: CMakeLists.txt  index.html  mainpage.md
docs/html/: annotated.html  annotated_dup.js  ascii-art_8hpp.html  ascii-art_8hpp__dep__incl.map  ascii-art_8hpp__dep__incl.md5  ascii-art_8hpp_source.html  ascii__art_8hpp.html  ascii__art_8hpp__dep__incl.map  ascii__art_8hpp__dep__incl.md5  ascii__art_8hpp_source.html  classes.html  classprimal_1_1Cli-members.html  classprimal_1_1Cli.html  classprimal_1_1Cli.js  classprimal_1_1Options-members.html  classprimal_1_1Options.html  classprimal_1_1Options.js  cli_8cpp.html  cli_8cpp__incl.map  cli_8cpp__incl.md5  cli_8hpp.html  cli_8hpp.js  cli_8hpp__dep__incl.map  cli_8hpp__dep__incl.md5  cli_8hpp__incl.map  cli_8hpp__incl.md5  cli_8hpp_source.html  command_8hpp.html  command_8hpp.js  command_8hpp__dep__incl.map  command_8hpp__dep__incl.md5  command_8hpp_source.html  dir_000000_000007.html  dir_000001_000007.html  dir_000005_000002.html  dir_000007_000006.html  dir_017eeaa2c0b607d3f5aeb5a101442f66.html  dir_017eeaa2c0b607d3f5aeb5a101442f66.js  dir_017eeaa2c0b607d3f5aeb5a101442f66_dep.map  dir_017eeaa2c0b607d3f5aeb5a101442f66_dep.md5  (+155 more)
docs/html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_6.js  all_7.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  classes_0.js  defines_0.js  enums_0.js  enums_1.js  enumvalues_1.js  enumvalues_2.js  enumvalues_3.js  enumvalues_5.js  enumvalues_6.js  enumvalues_7.js  files_0.js  files_1.js  files_2.js  files_5.js  files_6.js  files_7.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  namespaces_0.js  (+6 more)
include/primal/: ascii-art.hpp  ascii_art.hpp  cli.hpp  command.hpp  options.hpp  session.hpp
include/primal/command/: index.hpp  list.hpp  test.hpp
include/primal/functions/: index.hpp  list.hpp  test.hpp
include/primal/utils/: prompt.hpp
include/primal/utils/math/: primality-test.hpp  primality.hpp  primality_test.hpp  sieve.hpp
include/primal/utils/string/: format-specifier.hpp  format_specifier.hpp  parse.hpp
scripts/: generate-docs.sh  install.sh  uninstall.sh
src/: CMakeLists.txt  cli.cpp  main.cpp  options.cpp  session.cpp
